src/app/game-tile/game-tile.component.scss
@import "variables.scss";

.tile {
  height: 1.2em;
  width: 1.2em;
  box-sizing: border-box;
  display: flex;
  justify-content: center;
  align-items: center;
  font-weight: 900;
  font-family: 'Courier New', Courier, monospace;
  border-style: solid;
  border-width: 0.2em;
  border-top-color: white;
  border-left-color: white;
  border-bottom-color: #808080;
  border-right-color: #808080;
  background-color: #C0C0C0;
}

.uncovered {
  border-top: 0.05em solid #808080;
  border-left: 0.05em solid #808080;
  border-bottom: 0;
  border-right: 0; 
}

.n1 {
  color: #0000FF;
}

.n2 {
  color: #008000;
}

.n3 {
  color: #FF0000;
}

.n4 {
  color: #000080;
}

.n5 {
  color: #942A2A;
}

.n6 {
  color: #008484;
}

.n7 {
  color: black;
}

.n8 {
  color: #808080;
}

